<resources>
    <string name="app_name">White Mark</string>
    <string name="version_app">Version: 1.0</string>
    <string name="company_name">WM</string>
    <string name="title_home">Home</string>
    <string name="title_admin">Admin</string>
    <string name="title_add">Add</string>
    <string name="title_edit">Edit</string>
    <string name="title_profile">Profile</string>
    <string name="title_god">G0D</string>
    <string name="title_login">Login</string>
    <string name="title_detail">Detail</string>
    <string name="detail_product">product</string>
    <string name="detail_user">user</string>
    <string name="detail_admin">admin</string>
    <string name="detail_g0d">g0d</string>
    <string name="deleted_success">Se ha limpiado el storage de imagenes sin dueño:</string>
    <string name="error_list">No se pudo conseguir la lista. Intente nuevamente más tarde</string>
    <string name="error_modify">No se pudo modificar el usuario. Intente nuevamente más tarde</string>
    <string name="error_delete">No se pudo eliminar el usuario. Intente nuevamente más tarde</string>
    <string name="empty_space">Debe ingresar algún dato para continuar</string>
    <string name="valid_role">Debe ingresar algún rol válido para continuar</string>
    <string name="prefs_file">com.frost.project_wm.PREFERENCE_FILE_KEY</string>
    <string name="shared_pref_name">Nombre</string>
    <string name="shared_pref_email">Email</string>
    <string name="shared_pref_role">Rol</string>
    <string name="shared_pref_company">Empresa</string>
    <string name="loading_message">Cargando...</string>
    <string name="btn_add_message">Agregar Producto</string>
    <string name="btn_modify_message">Modificar Producto</string>
    <string name="insert_text">Por favor ingrese texto</string>
    <string name="select_image">Por favor seleccione una imagen</string>
    <string name="not_yet_implemented">Aun no implementado</string>
    <string name="error_message">Se ha producido un error autenticando al usuario</string>
    <string name="error_message_product">Se ha producido un error buscando al producto</string>
    <string name="error_save_product">Se ha producido un error guardando el producto</string>
    <string name="error_modifing_product">Se ha producido un error modificando el producto</string>
    <string name="error_deleting_product">Se ha producido un error borrando el producto</string>
    <string name="invalid_id">Por favor ingresa un número valido de ID</string>
    <string name="empty_id">Por favor ingresa un número de ID</string>
    <string name="server_initializing">Iniciando el servidor gratuito\n en un momento mostraremos sus datos</string>
    <string name="change_role">Cambiar Rol</string>
    <string name="remove_user">Eliminar Usuarioo</string>
    <string name="error">Error</string>
    <string name="login_text">Seleccione su cuenta\npara ingresar:</string>
    <string name="brand_text">Bienvenido a WhiteMark</string>
    <string name="is_active_text">Activo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>