<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.frost.project_wm.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.frost.project_wm.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.frost.project_wm.ui.admin.AdminFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/fragment_admin" />

    <fragment
        android:id="@+id/navigation_god"
        android:name="com.frost.project_wm.ui.god.GodFragment"
        android:label="@string/title_god"
        tools:layout="@layout/fragment_god" >
        <action
            android:id="@+id/action_navigation_god_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.frost.project_wm.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>